Fix missing return and add some Java 21 array features